--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,3 +1,10 @@
+
+################################################################################
+# add my config
+################################################################################
+db.driver = mysql
+db.spec = root:@/fbranking
+
 ################################################################################
 # Revel configuration file
 # See:
