パラメータ長くなるからpostで

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,11 +1,5 @@
 
 ################################################################################
-# add my config
-################################################################################
-db.driver = mysql
-db.spec = root:@/fbranking
-
-################################################################################
 # Revel configuration file
 # See:
 #   http://revel.github.io/manual/appconf.html
@@ -139,6 +133,12 @@ log.warn.output  = stderr
 log.error.output = stderr
 
 
+################################################################################
+# add my config
+################################################################################
+db.driver = mysql
+db.spec = root:@/fbranking
+
 
 ################################################################################
 # Section: prod
@@ -163,3 +163,10 @@ log.trace.output = off
 log.info.output  = off
 log.warn.output  = %(app.name)s.log
 log.error.output = %(app.name)s.log
+
+
+################################################################################
+# add my config
+################################################################################
+db.driver = mysql
+db.spec = hashimoto:@/fbranking
